--- a/gradle.properties
+++ b/gradle.properties
@@ -1,1 +1,5 @@
 org.gradle.jvmargs=-Dfile.encoding=UTF-8
+systemProp.selenide.browser=chrome
+systemProp.selenide.timeout=4000
+systemProp.selenide.headless=true
+systemProp.selenide.disable-gpu=true
