--- a/build.gradle
+++ b/build.gradle
@@ -6,20 +6,21 @@ repositories {
     mavenCentral()
 }
 dependencies {
-    testImplementation group: 'com.codeborne', name: 'selenide', version:'6.17.2'
+    testImplementation group: 'com.codeborne', name: 'selenide', version: '6.17.2'
 
     // JUnit 5
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.9.3'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.9.3'
 
     // Logging of 3-rd party libraries
-    testImplementation group: 'org.slf4j', name: 'jul-to-slf4j', version:'2.0.7'
+    testImplementation group: 'org.slf4j', name: 'jul-to-slf4j', version: '2.0.7'
     testImplementation group: 'ch.qos.logback', name: 'logback-classic', version: '1.4.7'
 }
 
 test {
     // JUnit 5
     useJUnitPlatform()
+    failFast = true
 }
 
 tasks.withType(Test) {
