--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,4 @@
-org.gradle.jvmargs=-Dfile.encoding=UTF-8
+systemProp.file.encoding=utf-8
 systemProp.selenide.browser=chrome
 systemProp.selenide.timeout=4000
 systemProp.selenide.headless=true
